--- a/src/main/resources/templates/profile/update.html
+++ b/src/main/resources/templates/profile/update.html
@@ -529,7 +529,7 @@ const add_product_btn_el = document.querySelector('.add_product_btn');
 
 location.reload();
 
-<!--            window.location.href = "/mypage";-->
+<!--            window.location.href = "/profile/update";-->
 
             form.submit();
 
