--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -161,13 +161,13 @@
                 <div class="loginbtn">
 
                     <!-- <input type="submit" class="jechul" value="HAMOHAMO 로그인"/> -->
-                    <button type="submit" class="btn btn-secondary btn-lg" style="position : relative; bottom : 30px;">Login</button>
+                    <button type="submit" class="btn btn-secondary btn-lg" style="position : relative; bottom : 20px;">Login</button>
                 </div>
             </form>
 
             <div class="find" style="width : 230px;border-top : 1px solid rgb(194, 194, 194);padding-top : 30px;text-align: center;position : relative;bottom : 50px;">
-                <a href="/findid" class="forget" style="font-size: 0.8rem; ">가입한 이메일을 잊으셨나요?</a><br/>
-                <a href="/emailcheck" class="forget" style="font-size: 0.8rem; ">패스워드를 잊으셨나요?</a>
+                <a href="/findid" class="forget" style="font-size: 0.8rem; margin-right : 10px;">이메일 찾기</a>
+                <a href="/emailcheck" class="forget" style="font-size: 0.8rem; margin-left : 10px;">비밀번호 찾기</a>
             </div>
 
         </div>
