살짝의폼수정

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -160,8 +160,7 @@
 
                 <div class="loginbtn">
 
-                    <!-- <input type="submit" class="jechul" value="HAMOHAMO 로그인"/> -->
-                    <button type="submit" class="btn btn-secondary btn-lg" style="position : relative; bottom : 20px;">Login</button>
+                    <button type="submit" class="btn btn-secondary btn-lg" style="position : relative; bottom : 20px;display: flex;align-items: center;justify-content: center;">Login</button>
                 </div>
             </form>
 
