--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -262,17 +262,20 @@
 
         </div>
         <div class="fallow">
+<!--            내정보-->
             <div class="myInfo" style="height : 60px;">
                 <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:40px;height:40px;border-radius:50%;margin : 10px;" />
                 <span th:text="${#authentication.getPrincipal().getUser().getEmail()}">my email</span>
             </div>
+
+<!--            친구정보-->
             <div style="margin-top : 20px;padding-top : 20px;border-top : 1px solid rgb(194, 194, 194);">
                 <!-- followList가 리스트일 경우 각 항목을 순회하며 표시 -->
                 <div th:each="follow : ${followList}" style="height : 60px; margin-bottom : 10px;">
                     <!-- follower 객체에서 필요한 속성을 가져와서 표시 -->
-                    <img th:src="${#authentication.getPrincipal().getUser().getProfile()}" style="width:40px;height:40px;border-radius:50%;margin : 10px;" />
+                    <img th:src="${follow.profile}" style="width:40px;height:40px;border-radius:50%;margin : 10px;" />
 
-                    <span th:text="${follow}">nam email</span>
+                    <span th:text="${follow.nickname}">nam email</span>
                 </div>
             </div>
         </div>
